tests/baselines/reference/mappedTypeWithCombinedTypeMappers.errors.txt
tests/cases/compiler/mappedTypeWithCombinedTypeMappers.ts(18,7): error TS2322: Type '文字' is not assignable to type '{ important: 真假; }'.


==== tests/cases/compiler/mappedTypeWithCombinedTypeMappers.ts (1 errors) ====
    // Repro from #13351
    
    type Meta<T, A> = {
        readonly[P in keyof T]: {
            value: T[P];
            also: A;
            readonly children: Meta<T[P], A>;
        };
    }
    
    interface Input {
        x: string;
        y: number;
    }
    
    declare const output: Meta<Input, boolean>;
    
    const shouldFail: { important: boolean } = output.x.children;
          ~~~~~~~~~~
!!! error TS2322: Type '文字' is not assignable to type '{ important: 真假; }'.
    